# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1287 2014/03/31 18:06:42 mpagano Exp $

*gentoo-sources-3.13.8 (31 Mar 2014)

  31 Mar 2014; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.13.8.ebuild:
  Linux patch 3.13.8

*gentoo-sources-3.14.0 (31 Mar 2014)

  31 Mar 2014; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.0.ebuild:
  Support for namespace user.pax.* on tmpfs. Enable mic mute led in thinkpads.
  Zero copy for infiniband psm userspace driver. Disable Windows 8
  compatibility for some Lenovo ThinkPads. Ensure that /dev/root doesn't appear
  in /proc/mounts when bootint without an initramfs. Do not lock when UMH is
  waiting on current thread spawned by linuxrc. Bootsplash successor by Michal
  Januszewski ported by Jeremy. Support for Pogoplug e02 (bug #460350),
  adjusted to be opt-in by TomWij. Add Gentoo Linux support config settings and
  defaults.

*gentoo-sources-3.12.15 (26 Mar 2014)

  26 Mar 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.12.15.ebuild:
  Version bump to 3.12.15.

  26 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> gentoo-sources-3.12.13.ebuild:
  x86 stable wrt bug #503310

  26 Mar 2014; Raúl Porcel <armin76@gentoo.org> gentoo-sources-3.10.32.ebuild,
  gentoo-sources-3.12.13.ebuild:
  arm/ia64/sparc stable wrt #503310, #503402

*gentoo-sources-3.10.34 (24 Mar 2014)
*gentoo-sources-3.4.84 (24 Mar 2014)
*gentoo-sources-3.13.7 (24 Mar 2014)

  24 Mar 2014; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.10.34.ebuild,
  +gentoo-sources-3.13.7.ebuild, +gentoo-sources-3.4.84.ebuild:
  Linux patches 3.4.84, 3.10.34 and 3.13.7.

*gentoo-sources-3.4.83 (12 Mar 2014)

  12 Mar 2014; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.83.ebuild:
  Linux patch 3.4.83

*gentoo-sources-3.12.14 (10 Mar 2014)
