@@ -29,6 +29,9 @@ DIST genpatches-3.10-40.extras.tar.xz 17756 SHA256 611b96b571e93f9e708529e35dbfb
 DIST genpatches-3.10-41.base.tar.xz 669772 SHA256 37097099bfd860140efbc6e4e9c5732f458586663a83d4b7d1a63f8d4fe5df6d SHA512 9ad3b74faf01ad9bafac0d2e8712bcde92bcc9dade01e2fe0efed6e46adc9bacdbef95be0ec053dfe946d5da6ac6892ed9f8e4e38dfebc4368d51f48f27c4f8b WHIRLPOOL 837fb5774d4a901b485cf8f35f9559a3136071d3ce98ca760273b46dd7b1c8db8820e054adfc45b002f7d5a0cd295bc41789af92bdbf302a379742e247cf8af8
 DIST genpatches-3.10-41.experimental.tar.xz 48596 SHA256 04000c4555756aabf9bf7fc0701d8b1d2ef878e513eea3a8fcdd9541c309ab1e SHA512 192faf267f17f8708a96ea9429a5e14ff03b591ec888cd4688b5c02765f3af1f052a99915969c366c65965ab657152193bbd98c83f093da76ba66930de473d77 WHIRLPOOL 6ddd24fd6f79b60cba7eae10b24a581dbd27d685b604ca19dd7b23edf714458f13bcbe0a090cfd012675d91fe660e5ee8411d539b78394269d803bc1d9a30d06
 DIST genpatches-3.10-41.extras.tar.xz 17760 SHA256 000d999dbce3be66cdfe54c5c59400d448b39150e53924f6c2238330a953d731 SHA512 bbb7f9bb03273db4e2f627570c44f3851d7aedc232467f89ea3b22828b2cf0e43ec260ca2e4014f1d44d420c82639cdf7e2e85e8cb17d3b8f7d945989cb1a838 WHIRLPOOL 52fccf3ea047b44e8d301b1318564cc6c47a23dd3dd71812c6a041f3f202a70413c2e28579002120e39b6195d20670c7aeb5de61a717658247f42c88eeb586bc
+DIST genpatches-3.10-42.base.tar.xz 675988 SHA256 67363b35c4ce7bcc79c64ac808d4eb127710f4a405b9859dd2a7ce83526e36a1 SHA512 c83c05cffa3bc851789f4eb3a5926b70ceccca2fc8464368a76058aafc06ea310d496ace5858fafc784260acf60758787cae4c17a86193e8117b3315ed92acf8 WHIRLPOOL 31493caa03e6a451c0ff64261f379ec713b666c3576e3c37d9da9ceb6d30c9ea58f106774a231596bcd0ba04fd52925aa0b442c812c36283143ce2844daa220f
+DIST genpatches-3.10-42.experimental.tar.xz 48596 SHA256 fb8f048de6c351bd5ac4ea396686e0eda051f522ad4d8b146487ac650d84c17e SHA512 3b0bdfab78a5c34bebd717a40acb7d2f429af2c3a6c743bf2096da29ce4cc95855eb6437389f86c33d123b7e270de0754e05a162d3dcabc485791f3708fb5a9f WHIRLPOOL c6b00e178d400699c0fe4b394f8571df9477b198049253a065b82328ebb74e0e2dfbaf2f2a202df1695ab0621190e61eb73887f9e542306e830434bc85521576
+DIST genpatches-3.10-42.extras.tar.xz 17756 SHA256 611b96b571e93f9e708529e35dbfb3977b1f1bb4f0178ae7a2935b28d110aa2e SHA512 08347a5f186bd90420b2d7354f3e94fcd78f6853257deb41ec0e52aea0e15c8455e9173d61611064c83a09887b601647102ba57d59315413040800b17d8cd18b WHIRLPOOL 1d9d3d66dbdb98ea3c48bfdc16e4ed3cef9afceee4ac66f6c2c5d8da398226fe98ceba09a90d22fed164a0157f1b461d501def88ed512768a0e7237becd2b68b
 DIST genpatches-3.10.7-1.base.tar.xz 226708 SHA256 2c0aeb406bc461db705155b7740306527f2685f533a1f1d0ddcfa55b728ea906 SHA512 af4b7f9ae6f66597bb8216c102befcdc9513b954f92009e0dd4ebd48f21c7d71510b27b59575ad6dedd976a4d92cbbe090bef75fcb64ddd7089b03103f4cc45f WHIRLPOOL 287e2eafd279549d120ef6c7a8235c08d29b529f042f6cb779064b0488e3e93812a7a9ae12bebef42a7055b0fcfb156c90ffcc55b957ad53a135cda1cc3a02d8
 DIST genpatches-3.10.7-1.extras.tar.xz 17732 SHA256 699d67f6827c9c06207bdcd81ff7132efe148c49f9088ad70c2354bc1aed4440 SHA512 4445126ae7662fae576e46ca9728895311f6956de95efc38d0ac4499d3b8973092a4fa42af2dbf63e136168636b1c5b49d6db215e13c57cf603a65e0a3f90f4d WHIRLPOOL 1b792770c9a45102bcbb626193d10e35fca350227aed7b76cc47a3460a9fbaea9383659b2665855120aea30e8509aa5818a22231732587922950aae56f2e97cc
 DIST genpatches-3.12-13.base.tar.xz 341428 SHA256 18fcef51b83c64b1ae9901ad8b2f2f9c7dc12be2492b5794062d06041c6a1b33 SHA512 adc873c1c5afbfd4e5d4a95ed39353621831c9a6ae3181c568f63f114dcd2885dd85449f8d8ec2a1c9147bef79da1d5cf88da68b99250b650402c1f28eed0412 WHIRLPOOL 1bb4e3cc550821762957de0f6cd68ceab61a6009b00d134be3a3ee63e3ad729b1a4bfb2fe9ea613d700050ea56bd33142d852ff0fee4c0c04342e661aee9b2ba
@@ -82,6 +85,7 @@ EBUILD gentoo-sources-3.10.31.ebuild 894 SHA256 bccce4b690865fa86f27f7ecadd235eb
 EBUILD gentoo-sources-3.10.32.ebuild 888 SHA256 da02d980a6cd6363f0e0c9702fc7e057e38b6a5699e04fa5c47565d52dbe56a7 SHA512 5b82bf0aeef4620f482650d9ebf5e685d871cc6c4c8356e23d04eb1b925d1c03ef590c5babafb73e0976a34d47c44ec551a5daab5098c4ca59eacb5ac3177f7b WHIRLPOOL b288bf9c043c6ab3331272602bc004fec4d12ce051086104a95faa3085415661369dd7d68efd5b711cbee629d92d08dc35a6b692ccfb85921be67b75b0fe3cbd
 EBUILD gentoo-sources-3.10.33.ebuild 894 SHA256 5786449cc4f44417df21762a722f235567e7b52274ff9c0edaaeb1fbd2d8d0c5 SHA512 a0f590912ca91143a7191f5fea70e71d82f82f16907d9066b13bd5a51c53a10ed0a2d45296cb2617757831a1e0676bd9b279ffa4bc9c05922600c29999b26568 WHIRLPOOL 29909e980b9e1a83280e7726ef6f047256f058ccd74c4177c753b4cf5e53b58c20f8921c810680fb30c65c66ff6608efb5d2eefe2a6cadff4595892dacbce095
 EBUILD gentoo-sources-3.10.34.ebuild 893 SHA256 cd96f7ba1f1d233801f58365f425aa4fab4c7bbd3089b972b02cea73f40b480a SHA512 716e5a8db8347e150dccdb66bd0a4c66a49092a1b4a2ceb845ae6d0046bea2e5cafbeabc399091882ffa08ebcb6f2ee2583428b14fea301ef0c3ca3e776683d1 WHIRLPOOL 7d808b819b1583d513da5dd966e6b20efce655a54c986d1feb68acb055e55f18a20744deb9e979c4ceceaf19bd719cf0325b4fc8370566cd63eb72fc58ce47bc
+EBUILD gentoo-sources-3.10.35.ebuild 894 SHA256 417d7598d1f68551aff10a3098cbd83f2039fed2721ea897f0c4bc77111a071e SHA512 d0446aabbd73d6df9411513814e3067481b8340a101c52f6af95dc7d9d692e05200f24733af4a701de39f628ed7dce4e4e3e66d801b846ed662c3789c659ea82 WHIRLPOOL 6139a1e41989b3c9ccf8ff4fc8f6397d7ee47bde94f7fcc1d249056bbe3355694043e6622b27ddf9cfddfb298da97450e80c1a37016a5fc9e1f455c6d4109edd
 EBUILD gentoo-sources-3.10.7-r1.ebuild 1049 SHA256 1d5dc0fb06e8215962bfc7b347298b0ebf7189b569e6df4161ed57a150418eac SHA512 970923154671e6d470933c1a64959e6ac617c6341a111412322bafa629a9a2d335b9d9e546e37425864b53db78cea7343e688ee55bfccb36cc0d4ae7b78f735e WHIRLPOOL 26024dfe2cca53583e3e0350ef2654fb6c2e0ed1768fffb3d2710948d30360a2910bc39ddbb26619e4ca1505b5311902f647bc5f611d44f59ad8592de6fed914
 EBUILD gentoo-sources-3.10.9999.ebuild 2262 SHA256 89ed294d75257550f40e6fd7a2c4f49a2d4e58a109c49d673971581adb5bcb3e SHA512 27a8dccf0896653c86c1c8fae0a8c4ad3a417aca3b86a1f050070fcde70b3479745a000a0d2fad27d5cbe8b39f5578bc60f2d4f5c549108e4c077a02a718015d WHIRLPOOL 4279f9ed0682d59d758b94361d4f9358b3e8aef35158638c34d3ab267425fbe8e63614f575dc6dc22f4795a9cd6907b8db533cb6646500347eb736c9b8e20842
 EBUILD gentoo-sources-3.12.12.ebuild 894 SHA256 c1565738c9c51072317ea072e1d9bb64c775b3a328d759f30d932134bae0c084 SHA512 03d8b34a5b50a33f1978b763a18d98f54a1f29b0dea148f7174cd3e94feb8e49c4d61e4ea6fa5ac5af233441212af20403462cfe7f550fabe173552f956378bd WHIRLPOOL 6a06194126fe04fde03fef3effedb62c64dc061a51650245b90e1bb54b57f612122b4b26c00a69b3ad712dc4ef23f7421f48f02fe2d8d6df6ac23797817bf196
@@ -102,14 +106,14 @@ EBUILD gentoo-sources-3.4.82.ebuild 861 SHA256 7246a77e3f0f7d6986d94c50cf46f2f6b
 EBUILD gentoo-sources-3.4.83.ebuild 861 SHA256 7ba891c80b2e99f38834a6e27cb4ffd83f6b2357fe9e3389d6e07a6daccc22fb SHA512 67508e36c931caa7260e4bda1b4c03292d56ee876652db529cce295db461e2ce95c11d416444bd31cd8a16d23aac2b7ccaa388781ac38c74538b993b9138c6a2 WHIRLPOOL 68717b77472a0bfc81f8d6b98cdd91940cffd3c3d93ef9f654e02d6e78b7f72ab417208c95fa8e53969f6c058f5fd66e1b2ef7f26c12d2afc75d3b06e36f5cb6
 EBUILD gentoo-sources-3.4.84.ebuild 860 SHA256 4c276b6c842121ceb4549c62d132d44e0b74fc67004781be34684ce4ef895e2b SHA512 72da1ebe6ca8c562bb076ee1ac0a617611a06ee0bb579afd8232cecd5a42f0de6dc244bb56569d640241fb9adabdadafc55940c339175e27f47bbcf3945aa35e WHIRLPOOL caabe65d44347fa7bf628f000903f1da4601d71d7f1d7de281a0c0d0e9db6b1a17a72dec1541d63be34a726b2a041e222d19d4e78067be524fe26d0c02a34151
 EBUILD gentoo-sources-3.4.9999.ebuild 2261 SHA256 64d3f4729e4948fdf9014146398b83037934c269559bf1d741ae6f8ec7a8035d SHA512 5245ba40f58e8e697834f5700e9e26cc30636d9d5fe85207e113cbeca36d1b3af0b949c24100de4b4291b532f76f6f127e2e0a93645058fd9bb517bb429fff01 WHIRLPOOL 16a31af3779c07c0008dd8423d9ee25c4b8d96b1ad0278ce454627c6d88bc0f533576317486f046228ad771cfa621273f4d9099324b238cdab709da7690dd14a
-MISC ChangeLog 58303 SHA256 4ea5fe183c9c49204c04825a5b876042b014f08fbeffcfda3646518fbb33f422 SHA512 d3e1717cd4ff491287b925ed15f5e89723a5c9656665bc0c2c3e9f9e222ee7f1fd6de2e488db164a6caf43713d7bb20afe9887759304a18d6334a9fe93c50a89 WHIRLPOOL b776d731a4f6112f948b55955774e7a55e1f02e9317dcabd072cfb7556a567d0eb7d93acc05ffa5b3df3d3e525acf13d404d67ef956603263a93054b4435c396
+MISC ChangeLog 58449 SHA256 6df9abfa31864cb2c217c5a85c934ab773a5f921776e05acd0bc8d1178fd0f1f SHA512 9bb71c6821e1e423870c5b962c3f7d74b7e0cd3d6a2ef7255cd1cbf65ce280e2a3cc3583782d608530d41f65614a61ad22f6a5d943f380a0c83093fcc61aea88 WHIRLPOOL 771772b5cf8a71fbf54ce89d7318f4963228178e799365caccc73e5fc5775021efd79ec713935c55787365b3b59d48b24c9ba7578cbd9ed7500767ffc3ba7391
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlM5oQEACgkQPDPGULV25OMc3gCguonGvB/PXzkntq8OQdxY8Zxk
-UeEAnREiCgPsQdIIvf4OS4HSMwX7vl6z
-=OmoO
+iEYEAREIAAYFAlM5sOwACgkQPDPGULV25OMbhACg3EtWgN0TliDtoe32r0FMMFb+
+uuIAn1tGDIyB5niVNQ3umG0FDQMzeJUb
+=Tkr6
 -----END PGP SIGNATURE-----
