@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1287 2014/03/31 18:06:42 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1288 2014/03/31 19:16:21 mpagano Exp $
+
+*gentoo-sources-3.10.35 (31 Mar 2014)
+
+  31 Mar 2014; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.10.35.ebuild:
+  Linux version bump
 
 *gentoo-sources-3.13.8 (31 Mar 2014)
 
